--- a/_includes/blocks/home-hero.html
+++ b/_includes/blocks/home-hero.html
@@ -2,10 +2,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8">
-                <h1 class="display-3 words">
+                <h1 class="display-1 words">
                     {{ site.title }}
                 </h1>
-                <h3 class="words">
+                <h3 class="words text-muted">
                     {{ site.brief_desc}}
                 </h3>
             </div>
