--- a/assets/styles/_root.scss
+++ b/assets/styles/_root.scss
@@ -14,7 +14,7 @@
     --type-headline-color: #{$primary};
     --type-body-color: #{$font-color};
     --btn-link-color: #{$primary};
-    --btn-link-text-color: #{$white};
+    --btn-link-text-color: #{$primary};
     --border-color: #{$gray};
 }
 
