--- a/assets/styles/_archives.scss
+++ b/assets/styles/_archives.scss
@@ -19,15 +19,23 @@
 }
 
 .project-card {
-    min-height: 450px;
-    padding: $spacer-1;
-    display: flex;
-    align-items: flex-end;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+    .card--image {
+        height: 450px;
+        overflow: hidden;
+        object-fit: cover;
 
-    @media screen and (max-width: $breakpoint-md) {
-        margin-bottom: $spacer-1;
+        img {
+            object-fit: cover;
+            height: 100%;
+            width: 100%;
+            transition: all .7s ease-in-out;
+        }
+
+        &:hover {
+            img {
+                transform: scale(115%);
+            }
+        }
+
     }
 }
