--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -1,5 +1,5 @@
 $primary:           #000;
-$secondary:         #d5d5ba;
+$secondary:         #F04F23;
 $gray:              #3F424D;
 $muted-gray:        #8d8d8d;
 $light:             #f3f4f4;
