--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -298,8 +298,8 @@ $cyans: (
 // fusv-enable
 
 // scss-docs-start theme-color-variables
-$primary:       #282828 !default;
-$secondary:     #DA6B41 !default;
+$primary:       #1E2831 !default;
+$secondary:     #779F9D !default;
 $third:         #9F7756 !default;
 $success:       $green !default;
 $info:          $cyan !default;
