--- a/_includes/blocks/home-hero.html
+++ b/_includes/blocks/home-hero.html
@@ -1,5 +1,5 @@
 <div class="container-fluid bg-primary bg-grid-numbers">
-    <div class="container vh-80 py-5 py-md-8 d-flex align-items-end">
+    <div class="container vh-80 py-8 d-flex align-items-end">
         <div class="row">
             <div class="col-md-1 d-flex align-items-start">
                 <p class="h6 text-third sidebar-text me-md-auto">
@@ -19,7 +19,7 @@
         </div>
     </div>
 </div>
-<div class="bg-primary">
+<div class="bg-primary position-relative mask-small">
     <div class="container-fluid section-mask has-mask mask-1 bg-light">
     </div>
 </div>
