--- a/_includes/blocks/home-boh.html
+++ b/_includes/blocks/home-boh.html
@@ -1,7 +1,14 @@
-<div class="container-fluid bg-light py-6">
-    <div class="container">
+<div class="container-fluid pt-4">
+    <div class="container border-top pt-4 pb-6">
         <div class="row">
-            <hr class="border-drawn border-secondary">
+            <div class="col-auto">
+                Back of House
+            </div>
+            <div class="col-auto ms-auto text-end">
+                <a href="/backofhouse/">
+                    View all
+                </a>
+            </div>
         </div>
     </div>
 </div>
