--- a/_includes/blocks/home-hero.html
+++ b/_includes/blocks/home-hero.html
@@ -1,25 +1,11 @@
-<div class="container-fluid bg-primary bg-grid-numbers">
-    <div class="container vh-80 py-8 d-flex align-items-end">
+<div class="container-fluid pt-8 vh-60 d-flex align-items-end position-relative" style="z-index: 10;">
+    <div class="container">
         <div class="row">
-            <div class="col-md-1 d-flex align-items-start">
-                <p class="h6 text-third sidebar-text me-md-auto">
-                    <em>
-                        {{ site.title }}
-                    </em>
-                </p>
-            </div>
-            <div class="col-md-8">
-                <h1 class="display-1 text-white">
-                    {{ section.headline }}
+            <div class="col-12">
+                <h1 class="display-1 text-center">
+                    {{ site.title }}
                 </h1>
-                <h2 class="h4 text-white">
-                    {{ section.subheadline }}
-                </h2>
             </div>
         </div>
-    </div>
-</div>
-<div class="bg-primary position-relative mask-small">
-    <div class="container-fluid section-mask has-mask mask-1 bg-light">
     </div>
 </div>
