--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -1,6 +1,5 @@
-<footer class="bg-primary text-white">
+<footer class="bg-primary text-white py-6 px-2">
     <div class="container-fluid">
-        <div class="container py-8">
             <div class="row">
                 <div class="col-md-3">
                     <ul class="p-0 list-unstyled">
@@ -69,8 +68,6 @@
                         </li>
                     </ul>    
                 </div>
-                
             </div>
         </div>
-    </div>
 </footer>
