--- a/assets/styles/_type.scss
+++ b/assets/styles/_type.scss
@@ -106,7 +106,8 @@
 }
 
 .display-1 {
-  font-size: clamp( 4rem, 7vw, 7.2rem) !important;
+  font-size: clamp(4rem, 14vw, 13.2rem) !important;
+  line-height: 1;
 }
 
 @media screen and (min-width: $breakpoint-md) {
