--- a/assets/styles/custom/_dividers.scss
+++ b/assets/styles/custom/_dividers.scss
@@ -1,29 +1,1 @@
-.mask-small {
-    height: 250px;
-}
-.section-mask {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    mask-size: cover;
-    mask-repeat: no-repeat;
-    mask-position: top;
-}
-
-.mask-bottom {
-    transform: rotate(180deg);
-}
-
-.mask-1 {
-    mask-image: url("/assets/media/dividers/paper-tear-one.png");
-}
-
-.bg-grid-numbers {
-    background-image: url("/assets/media/textures/grid-numbers\ 2.png");
-    background-blend-mode: multiply;
-    background-size: 1105.49px 1920px;
-    background-repeat: no-repeat;
-    background-position: left;
-}
+//null 
