--- a/_includes/blocks/home-work-loop.html
+++ b/_includes/blocks/home-work-loop.html
@@ -1,46 +1,39 @@
-<div class="container-fluid bg-light pb-4">
-    <div class="container mb-4">
-        <div class="row align-items-end">
-            <div class="col-auto">
-                <h2 class="mb-0">
-                    Latest work
-                </h2>
-            </div>
-            <div class="col-auto ms-auto text-end">
-                <a href="/work/">
-                    View all work
-                </a>
-            </div>
-        </div>
-    </div>
+<div class="container-fluid">
     <div class="container">
         <div class="row">
-            {% assign sorted = site.work | sort: 'date' | reverse %}
-            {% for item in sorted | limit: 3 | offset: 1 %}
-                <div class="col-md-{% cycle '12', '6', '6' %}">
-                    <a href="{{ item.url}}">
-                        <div class="card-image mb-2 object-fit-cover object-position-center" style="height: 450px">
-                            <img src="{{ item.loop_image}}" alt="{{ item.title }}" width="100" height="100" class="object-fit-cover object-position-center h-100 w-100" style="object-position: center;">
+        {% assign sorted = site.work | sort: 'date' | reverse %}
+        {% for item in sorted | limit: 4 | offset: 1 %}
+            <div class="col-md-6">
+                <a href="{{ item.url }}" class="project-link">
+                    <div class="project-card">
+                        <div class="project-card-image">
+                            <p class="icon-link icon-link-white"> 
+                                arrow_forward
+                            </p>
+                            <img src="{{ item.loop_image }}" alt="{{ item.title }} loop image" width="100%" height="100%" class="object-fit-cover">
                         </div>
-                    </a>
-                    <div class="card-content mb-4 mb-md-6">
-                        <a href="{{ item.url }}" class="large-btn">
-                            {{ item.title }}
-                        </a>
-                        <p class="text-muted">
-                            {{ item.description }}
-                        </p>
+                        <div class="project-card-content mt-2 mb-4">
+                            <h3>
+                                {{ item.title }}
+                            </h3>
+                            <p>
+                                {{ item.description }}
+                            </p>
+                        </div>
                     </div>
-                </div>
-            {% endfor %}
+                </a>
+            </div>
+        {% endfor %}
         </div>
     </div>
-    <div class="container">
+    <div class="container mt-4">
         <div class="row">
-            <div class="col-12 text-center">
-                <a href="{{ /work/}}" class="large-btn">
-                    See all work
-                </a>
+            <div class="col-12">
+                <p class="text-center">
+                    <a href="/work/" class="btn btn-light">
+                        View all work
+                    </a>
+                </p>
             </div>
         </div>
     </div>
