--- a/assets/styles/custom/_cards.scss
+++ b/assets/styles/custom/_cards.scss
@@ -1,41 +1,56 @@
-:root {
-    --card-height: 300px;
-}
-
-@media screen and (min-width: $breakpoint-lg) {
-    :root {
-        --card-height: 400px;
+@media screen and (min-width: $breakpoint-md) {
+    .home-work-loop {
+        margin-top: -100px;
     }
 }
-
 
 .project-card {
-    padding: $spacer-2;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    min-height: var(--card-height);
 
-    &-info {
-        background-color: $white;
-        padding: $spacer-1;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        height: 100px;
-        opacity: 0;
-        transition: all .2s linear;
-    }
+    &-image {
+        height: 450px;
+        border-radius: $spacer-1;
+        overflow: hidden;
+        position: relative;
+        transition: all .3s ease-in-out;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, .0);
 
-    $card-padding: $spacer-2 * 2;
-
-    &:hover {
-
-        .project-card-info {
-            height: calc(var(--card-height) - $card-padding);
-            opacity: 1;
+        .icon-link {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%);
         }
-    }
 
+        &:before {
+            content: '';
+            position: absolute;
+            top: 0;
+            right: 0;
+            left: 0;
+            bottom: 0;
+            opacity: 0;
+            background-color: $secondary;
+            z-index: -1;
+            transition: all .3s ease-in-out;
+            will-change: transform;
+            transform-style: preserve-3d;
+            transform-origin: 50, 50;
+        }
+
+        &:hover {
+            box-shadow: 0 10px 30px rgba(0, 0, 0, .2);
+            transition: all .3s ease-in-out;
+            &:before {
+                content: '';
+                opacity: 1;
+                position: fixed;
+                top: 0;
+                right: 0;
+                left: 0;
+                bottom: 0;
+            }
+        }
+
+    }
 
 }
