--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -11,7 +11,7 @@
                         </li>
                     {% endfor %}
                         <li class="lead">
-                            <a href="/boh/" class="text-white">
+                            <a href="/backofhouse/" class="text-white">
                                 Back of House
                             </a>
                         </li>
