--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -299,7 +299,7 @@ $cyans: (
 
 // scss-docs-start theme-color-variables
 $primary:       #000000 !default;
-$secondary:     #f5571c !default;
+$secondary:     #003FA7 !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
