--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -1,9 +1,19 @@
-<nav class="navigation px-3">
+<nav class="navbar navbar-expand-lg bg-body-light fixed-top border-bottom border-primary">
   <div class="container-fluid">
-    <div class="logo-container">
-      <a href="/">
-        {% include /components/logo.svg %}
-      </a>
+    <a class="navbar-brand" href="/">{{ site.title }}</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        {% for nav in site.data.navigation %}
+        <li class="nav-item">
+          <a href="{{ nav.url }}" class="nav-link">
+            {{ nav.title }}
+          </a>
+        </li>
+        {% endfor %}
+      </ul>
     </div>
   </div>
 </nav>
