--- a/_layouts/casestudy.html
+++ b/_layouts/casestudy.html
@@ -1,3 +1,73 @@
 ---
 layout: default
 ---
+<article class="wrapper mt-4 py-6 border-bottom border-primary bg-light">
+    <div class="marquee">
+      <div class="marquee__group">
+        <p>
+            {{ page.description }} {{ page.description }} {{ page.description }} {{ page.description }} {{ page.description }} {{ page.description }} {{ page.description }} {{ page.description }} {{ page.description }} {{ page.description }} {{ page.description }} {{ page.description }} 
+        </p>
+      </div>
+    </div>
+  </article>
+  <header class="vh-60 d-flex bg-light align-items-end py-6">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <p>
+                    Case Study
+                </p>
+                <h1 class="display-2">
+                    {{ page.title }}
+                </h1>
+            </div>
+        </div>
+    </div>
+  </header>
+  <section class="bg-light pb-6">
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h3>
+                        Problem
+                    </h3>
+                    <p>
+                        {{ page.problem }}
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <h3>
+                        Solution
+                    </h3>
+                    <p>
+                        {{ page.solution }}
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <h3>
+                        Services
+                    </h3>
+                    <ul class="row list-ustyled px-1">
+                        {% for category in page.categories %}
+                        <li class="col-auto badge rounded-pill bg-secondary me-1 mb-1">
+                            {{ category }}
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+  </section>
+
+
+<article class="project-images py-6">
+    {% for section in page.page_sections %}
+    <!-- {{ forloop.index }} Start {{ section.template }} -->
+    <section class="{{ section.block | downcase }}" id="{{ section.id }}">
+        {% include /blocks/{{ section.block }}.html %}
+    </section>
+    <!-- {{ forloop.index }} End {{ section.template }} -->
+{% endfor %}
+</article>
