--- a/_includes/blocks/home-hero.html
+++ b/_includes/blocks/home-hero.html
@@ -1,4 +1,4 @@
-<div class="container-fluid pt-8 vh-60 d-flex align-items-end position-relative" style="z-index: 10;">
+<div class="container-fluid pt-8 vh-80 mt-6 d-flex align-items-end position-relative" style="z-index: 10;">
     <div class="container">
         <div class="row">
             <div class="col-12">
